add service creation implementation, fix termination operation