@@ -1,57 +1,71 @@
 package org.opentosca.artifacttemplates.dockercontainer;
 
 import java.io.File;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.io.OutputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.net.URLConnection;
 
-import org.apache.commons.io.FileUtils;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import com.google.common.io.Files;
+import org.apache.commons.compress.archivers.tar.TarArchiveEntry;
+import org.apache.commons.compress.archivers.tar.TarArchiveOutputStream;
+import org.apache.commons.io.IOUtils;
 
 public class FileHandler {
 
-    private static final Logger LOG = LoggerFactory.getLogger(FileHandler.class);
-
-    static URL getUrl(String url) {
+    protected static File downloadFile(final String url) {
         try {
-            return new URL(url);
-        } catch (MalformedURLException e) {
-            return null;
-        }
-    }
+            final URI dockerImageURI = new URI(url);
 
-    static File getFile(String path) {
-        File file = new File(path);
-        if (file.exists()) {
-            return file;
+            final String[] pathSplit = dockerImageURI.getRawPath().split("/");
+            final String fileName = pathSplit[pathSplit.length - 1];
+
+            final File tempDir = Files.createTempDir();
+            final File tempFile = new File(tempDir, fileName);
+
+            downloadFile(dockerImageURI, tempFile);
+            return tempFile;
+        } catch (final URISyntaxException | IOException e) {
+            e.printStackTrace();
         }
+
         return null;
     }
 
-    static String downloadFile(URL url, String directory, String filename) throws IOException {
-        HttpURLConnection connection = null;
-        InputStream stream = null;
+    protected static void downloadFile(URI dockerImageURI, File tempFile) throws IOException {
+        final URLConnection connection = dockerImageURI.toURL().openConnection();
+        connection.setRequestProperty("Accept", "application/octet-stream");
 
-        try {
-            connection = (HttpURLConnection) url.openConnection();
-            connection.setRequestProperty("Accept", "application/octet-stream");
-            stream = connection.getInputStream();
+        try (final InputStream input = connection.getInputStream()) {
+            final byte[] buffer = new byte[4096];
+            int n;
 
-            File file = new File(directory, filename);
-            FileUtils.copyInputStreamToFile(stream, file);
-            LOG.info("Downloaded file '{}' to temporary file '{}'. Didn't I? {}", url, file, file.exists());
-
-            return file.toString();
-        } finally {
-            if (stream != null) {
-                stream.close();
-            }
-            if (connection != null) {
-                connection.disconnect();
+            try (final OutputStream output = new FileOutputStream(tempFile)) {
+                while ((n = input.read(buffer)) != -1) {
+                    output.write(buffer, 0, n);
+                }
             }
         }
+    }
+
+    protected static File createTempTarFromFile(final File file) {
+        final TarArchiveEntry entry = new TarArchiveEntry(file, file.getName());
+
+        File tarArchive = null;
+        try {
+            tarArchive = File.createTempFile(String.valueOf(System.currentTimeMillis()), ".tar");
+            final TarArchiveOutputStream out = new TarArchiveOutputStream(new FileOutputStream(tarArchive));
+            out.putArchiveEntry(entry);
+            IOUtils.copy(new FileInputStream(file), out);
+            out.closeArchiveEntry();
+        } catch (final IOException e) {
+            e.printStackTrace();
+        }
+
+        return tarArchive;
     }
 }
